src/snapshots/multi_output_viewer__state__test__buffers_primary_bytes.snap
---
source: src/state.rs
description: "|state| { state.handle_primary_bytes(\"some data\".as_bytes()); }"
---
# Rendered:
```

```


# Raw:
```

```
