src/snapshots/multi_output_viewer__state__test__only_renders_primary_bytes_once.snap
---
source: src/state.rs
description: "|state|\n    {\n        state.handle_primary_bytes(\"no repeat \".as_bytes());\n        state.render().unwrap();\n        state.render().unwrap();\n    }"
---
# Rendered:
```
no repeat 
```


# Raw:
```
no repeat 
```
