src/snapshots/multi_output_viewer__state__test__passes_through_bytes.snap
---
source: src/state.rs
description: "|state|\n    {\n        state.handle_primary_bytes(\"my test string\\r\\nhello hi\".as_bytes()).render().unwrap();\n    }"
---
# Rendered:
```
my test string
hello hi
```


# Raw:
```
my test string
hello hi
```
